--- a/video.html
+++ b/video.html
@@ -36,6 +36,7 @@
             <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
       </h5> </div>
         </div>
+      </header>
 
         <header class="w3-panel w3-center" style="padding:10px 16px"><b>
           <video width="640" height="360" controls>
