--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ h1 {letter-spacing: 6px}
 body,h2 {font-family: "Raleway Bold", Arial, sans-serif}
 h2 {letter-spacing: 6px}
 h2 {opacity: 1.0}
+h2 {color: white}
 body,h5 {font-family: "Raleway", Arial, sans-serif}
 h5 {letter-spacing: 1px}
 .w3-row-padding img {margin-bottom: 12px}
@@ -38,7 +39,7 @@ h5 {letter-spacing: 1px}
   </div>
   </header>
 
-  <header class="w3-panel w3-center w3-black" style="padding:10px 16px">
+  <header class="w3-panel w3-center w3-navy-blue" style="padding:10px 16px">
     <h2 class="w3-xlarge">CONNECT WITH ME ONLINE</h2>
     <a href = "mailto:madeleine15.stone@gmail.com" target="_blank" class="w3-hover-text-green">madeleine15.stone@gmail.com</a><br>
     <a href = "tel:+1-443-813-2051" target="_blank" class="w3-hover-text-green">443-813-2051</a><br>
