--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ h5 {letter-spacing: 1px}
   </div>
   </header>
 
-  <header class="w3-panel w3-center w3-indigo" style="padding:10px 16px">
+  <header class="w3-panel w3-center w3-navypeony" style="padding:10px 16px">
     <h2 class="w3-xlarge">CONNECT WITH ME ONLINE</h2>
     <a href = "mailto:madeleine15.stone@gmail.com" target="_blank" class="w3-hover-text-green">madeleine15.stone@gmail.com</a><br>
     <a href = "tel:+1-443-813-2051" target="_blank" class="w3-hover-text-green">443-813-2051</a><br>
