--- a/screenwriting.html
+++ b/screenwriting.html
@@ -40,6 +40,6 @@
     </header>
 
     <header class="w3-panel w3-center" style="padding:10px 16px">
-      <w2 class="w3-xlarge">CHLOE SCREENWRITE</h2>
+      <h2 class="w3-xlarge">CHLOE SCREENWRITE</h2>
         <a href ="ChloeFinalDraft - Copy.pdf" target="_blank" class="w3-hover-text-green">link to script</a>
   </html>
