--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@ h1 {letter-spacing: 6px}
 body,h2 {font-family: "Raleway Bold", Arial, sans-serif}
 h2 {letter-spacing: 6px}
 h2 {opacity: 1.0}
-h2 {text-align: left}
+h2 {text-align: center}
 body,h3 {font-family: "Raleway Bold", Arial, sans-serif}
 h3 {letter-spacing: 6px}
 h3 {opacity: 1.0}
