--- a/video.html
+++ b/video.html
@@ -44,7 +44,8 @@
             <source src="MStone_Trail_Of_Light_FinalEdit.mp4" type="video/mp4">
             </video><br>
 
-          <video width="480" height="270" controls>
+          <video width="480" height="270"
+          poster="60SecondFilmChallenge.jpg" controls>
             <source src="MaddyStone_SinkingTime_Montage.mp4" type="video/mp4">
             </video>
       </header>
