--- a/audio.html
+++ b/audio.html
@@ -39,8 +39,9 @@
 
       <header class="w3-panel w3-center" style="padding:10px 16px">
         <audio controls>
+          <h2 class="w3-xlarge">GAMING AUDIO</h2>
           <source src="Stone-Game4_.wav" type="audio/wav">
-          </audio>
+         </audio><br>
 
         <audio controls>
           <source src="MStone_ClassActivity_Multitrack1 Mixdown 2.wav" type="audio/wav">
