--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@ h5 {letter-spacing: 1px}
         <source src="MaddyStone_SinkingTime_Montage.mp4" type="video/mp4">
         </video>
   </header>
-</header>
+
+<header class="w3-panel w3-center" style="padding: 10px 16px"><b>
+  <h2 class="w3-large">CHLOE SCREENWRITE</h2>
+  <p style="text-align: center;"> During the course Writing for Film/Broadcast, I worked on writing my very first screen writing play. Over the course of 15 weeks, I learned how to write a logline, develop characters and their own sub-plots, all to enhance the overall plot of my story. Some of the challenges that I faced during this project included ensuring that each character had their own personality that did not take away from the plot.</p>
 
   <header class="w3-panel w3-center w3-border-top w3-border-black" style="padding:10px 16px">
     <h2 class="w3-xlarge">CONNECT WITH ME ONLINE</h2>
