--- a/portfolio.html
+++ b/portfolio.html
@@ -36,10 +36,11 @@ h5 {letter-spacing: 1px}
     </h5> </div>
   </div>
 </header>
-<div class="w3-row-padding w3-center" style="margin-bottom:128px">
-  <a href="audio.html"><img src="Audiotab.jpg" alt="audio pieces"
-    style="width:200px;height:200px;"></a><br>
-    
+
+<header class="w3-panel w3-center" style="padding: 10px 16px"><b>
+  <h2 class="w3-large">CHLOE SCREENWRITE</h2>
+  <p style="text-align: center;"> During the course Writing for Film/Broadcast, I worked on writing my very first screen writing play. Over the course of 15 weeks, I learned how to write a logline, develop characters and their own sub-plots, all to enhance the overall plot of my story. Some of the challenges that I faced during this project included ensuring that each character had their own personality that did not take away from the plot.</p>
+
   <a href="screenwriting.html"><img src="screenwritingtab.jpg" alt="writing pieces"
     style="width:200px;height:200px; align:left;"></a>
 
