--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ h5 {letter-spacing: 1px}
 
 
   <div class="w3-padding-32">
-    <div class="w3-bar w3-border w3-lightblue">
-    <h5>  <a href="index.html" class="w3-bar-item w3-button">Home</a>
+    <div class="w3-bar w3-border">
+    <h5>  <a href="index.html" class="w3-bar-item w3-button w3-lightblue">Home</a>
       <a href="portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
       <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
 <h5> </div>
