--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ body,h2 {font-family: "Raleway Bold", Arial, sans-serif}
 h2 {letter-spacing: 6px}
 h2 {opacity: 1.0}
 body,h5 {font-family: "Raleway", Arial, sans-serif}
+h5 {background-color: lightpink;}
 h5 {letter-spacing: 1px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
