--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ h5 {letter-spacing: 1px}
   </div>
   </header>
 
-  <header class="w3-panel w3-center w3-lightblue" style="padding:10px 16px"><b>
+  <header class="w3-panel w3-center w3-opacity w3-lightblue" style="padding:10px 16px"><b>
     <h2 class="w3-xlarge">BIFSC FILM PROJECT: AUDIO PRODUCTION</h2>
     <p style="text-align: center;"> During my Audio Production 1 class, we participated in the BIFSC Film Project Challenge, where we created audio for a silent film, focusing on mood<br>and emotion. A challenge I faced during this project was finding exact sounds that made the film as realistic as possible.</p>
     <video width="640" height="360" align=center
